Agrega registro de Familia

--- a/colonia-gatos/src/main/java/vista/VentanaInicioSesion.form
+++ b/colonia-gatos/src/main/java/vista/VentanaInicioSesion.form
@@ -159,6 +159,9 @@
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Crear Cuenta"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRegistrarseActionPerformed"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
